--- a/Aufgabe_3/MauMau_freude/css/stylesheet.css
+++ b/Aufgabe_3/MauMau_freude/css/stylesheet.css
@@ -58,6 +58,7 @@ h1 {
 
 .CardSchwarz {
     padding: 100px 100px 80px 100px;
+    font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     margin-top: 20px;
@@ -71,6 +72,7 @@ h1 {
 
 .CardRed{
     padding: 100px 100px 80px 100px;
+    font-size: 1.5em;
     margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -84,7 +86,6 @@ h1 {
 
 
 .Symbol  {
-    margin-bottom: -45px;
     font-size: 50px;
 
 }
