--- a/Aufgabe_4/DE_eis/css/DEeis_css.css
+++ b/Aufgabe_4/DE_eis/css/DEeis_css.css
@@ -1,15 +1,17 @@
 * {
-	display: block;
+    display: block;
+    background-color: dodgerblue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 input[type="radio"], input[type="checkbox"], label {
 	display: inline;
 }
+head {
+	display: none;
+}
 label::after {
 	content:"";
 	display: block;
-}
-head {
-	display: none;
 }
 input:invalid {
 	background: #F0C060;
@@ -27,4 +29,11 @@ svg, figure, button, option {
 	display: inline;
 	margin: 0px;
 	padding: 0px;
+}
+button {background-color: greenyellow;
+}
+
+.fieldsetcontainer {
+    display: flex;
+    flex-wrap:wrap;
 }
