funktionsfähiger FUnktion (muss höchstwahrscheinlich verteitigen) hochladen

--- a/Aufgabe_4/DE_eis/css/DEeis_css.css
+++ b/Aufgabe_4/DE_eis/css/DEeis_css.css
@@ -56,5 +56,9 @@ button {background-color: greenyellow;
     position:fixed;
     top: 0;
     right: 0;
+    border: 0.3rem solid blue;
+    width:40%;
+    height:30%;
+    overflow:scroll;
 
 }
