--- a/Aufgabe_7/EisDealerNode/css/DEeis_css.css
+++ b/Aufgabe_7/EisDealerNode/css/DEeis_css.css
@@ -9,7 +9,6 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 * {
     display: block;
-    background-color: dodgerblue;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 input[type="radio"], input[type="checkbox"], label {
@@ -19,13 +18,28 @@ select {
     background-color: white;
     width: 250px;
 }
-head {
-	display: none;
+.headings {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+}
+legend {
+    font-weight: bold;
+
 }
 label::after {
 	content:"";
 	display: block;
 }
+input[type="number"]{
+	width: 50px;
+}
+
 input:invalid {
 	background: #F0C060;
 }
@@ -37,6 +51,7 @@ input:required {
 }
 fieldset {
     width:450px;
+    border: 0.3rem solid blue;
     margin-top:10px;
 }
 svg, figure, button, option {
@@ -44,9 +59,11 @@ svg, figure, button, option {
 	margin: 0px;
 	padding: 0px;
 }
-button {background-color: greenyellow;
+button {
+    background-color:skyblue;
     display: block;
     padding: 10px 10px 10px 10px;
+    margin-top: 10px;
 }
 
 .fieldsetcontainer {
@@ -59,7 +76,7 @@ button {background-color: greenyellow;
 
 .fortschrittcointainer{
     position:fixed;
-    top: 0;
+    bottom: 0;
     right: 0;
     border: 0.3rem solid blue;
     width:40%;
