nochmal ein upsi

--- a/Aufgabe_7/EisDealerNode/css/DEeis_css.css
+++ b/Aufgabe_7/EisDealerNode/css/DEeis_css.css
@@ -18,6 +18,9 @@ select {
     background-color: white;
     width: 250px;
 }
+.ueberHead {
+    font-weight: bold;
+}
 .headings {
     float: left;
     color: black;
