--- a/00_Endabgabe/Programm/CSS/stylesheet.css
+++ b/00_Endabgabe/Programm/CSS/stylesheet.css
@@ -1,145 +1,165 @@
+/* DISCLAIMER: Teile des CSS wurden aus Codepens übernommen*/
 body {
-font-family: 'Work Sans', sans-serif;
-}
-
-button{
-    height: 45px;
-    line-height: 39px;
-    width: 50%;
-    background: rgb(36, 202, 3);
-    transition: all .25s;
-    border: none;
-    border: solid 3px rgb(36, 202, 3);
-    color: #fff;
-    font-size: 20px;
-    margin: 50px auto !important;
-    display: block;
-    color: #fff !important;
-    box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
-}
-button:focus{
-    outline: none;
-}
-button:hover{
-    background: transparent;
-    color: rgb(0, 0, 0) !important;
-    width: 55%;
-    box-shadow: none;
-}
-#int-form{
-    max-width: 500px;
-    margin: 100px auto;
-    box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
-    position: relative;
-}
-.login,.register{
-    background: #fff;
-    padding: 50px;
-    box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
-}
-.register{
-    background: rgb(36, 202, 3);
-    color: #fff;
-}
-input ::placeholder {
-    font-size: 1.1em;
-    color: rgb(36, 202, 3);
-}
-.login input[type="text"],.register input[type="text"],.login input[type="password"],.register input[type="password"]{
-    border: none;
-    background: transparent;
-    height: 45px;
-    width: 100%;
-    margin-top: 30px;
-}
-
-.login input:hover,.register input:hover,.login input:focus,.register input:focus{
-    outline: none;
-}
-
-.login > div,.register > div{ /*Darstellugn der Linie */
-    position: relative;
-}
-.login > div:after,.register > div:after, .login > div:before,.register > div:before{
-    content: '';
-    position: absolute;
-    top: 100%;
-    width: 0%;
-    background: rgb(36, 202, 3);
-    left: 50%;
-    height: 2px;
-    transition: all .25s; 
-}
-.login > div:before{
-    background: #303030;
-}
-.register > div:after{
-    background: #303030;
-}
-.register > div:before{
-    background: #fff;
-}
-.login > div.trans:after,.register > div.trans:after, .login > div:before,.register > div:before{
-    width: 100%;
-    left: 0;
-}
-.login > div:not(.gender) label,.register > div:not(.gender) label{
-    position: absolute;
-    bottom: 5px;
-    left: 0;
-    transition: all .25s;
-    pointer-events: none;
-    font-weight: normal;
-}
-.login > div:not(.gender).trans label,.register > div:not(.gender).trans label{
-    bottom: 30px;
-    font-size: 12px;
-    opacity: .5;
-}
-
-/* DISCLAIMER: Die Animation der Radiobuttons wurden von einem CodePen übernommen, damit es schön aussieht*/
-.gender:before, .gender:after{
-    content: none !important;
-}
-.gender{
-    margin-top: 40px;
-}
-.gender label{
-    display: inline-block;
-    position: relative;
-    padding-left: 50px;
-    line-height: 35px; 
-    margin-right: 30px;
-}
-.gender label:before{
-    content: '';
-    height: 28px;
-    width: 28px;
-    position: absolute;
-    background: #fff;
-    border-radius: 50%;
-    box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
-    left: 0; 
-    top: 0;
-}
-.gender input[type="radio"]{
-    display: none;
-}
-.gender label:after{
-    content: '';
-    height: 16px;
-    width: 16px;
-    position: absolute;
-    background:rgb(36, 202, 3);
-    border-radius: 50%;
-    box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
-    transition: all .25s cubic-bezier(0.68,0.55,0.265,3);
-    left: 6px;
-    top: 6px; 
-    transform: scale(0);
-}
-.gender input[type="radio"]:checked+label:after{
-    transform: scale(1);
-}
-
-
+    font-family: 'Work Sans', sans-serif;
+    }
+    
+    button{
+        height: 45px;
+        line-height: 39px;
+        width: 50%;
+        background: rgb(36, 202, 3);
+        transition: all .25s;
+        border: none;
+        border: solid 3px rgb(36, 202, 3);
+        color: #fff;
+        font-size: 20px;
+        margin: 50px auto !important;
+        display: block;
+        color: #fff !important;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
+    }
+    button:focus{
+        outline: none;
+    }
+    button:hover{
+        background: transparent;
+        color: rgb(0, 0, 0) !important;
+        width: 55%;
+        box-shadow: none;
+    }
+    #int-form{
+        max-width: 500px;
+        margin: 100px auto;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
+        position: relative;
+    }
+    .login,.register{
+        background: #fff;
+        padding: 50px;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
+    }
+    .register{
+        background: rgb(36, 202, 3);
+        color: #fff;
+    }
+    input ::placeholder {
+        font-size: 1.1em;
+        color: rgb(36, 202, 3);
+    }
+    .login input[type="text"], .login input[type="textarea"],.register input[type="text"],.login input[type="password"],.register input[type="password"]{
+        border: none;
+        background: transparent;
+        height: 45px;
+        width: 100%;
+        margin-top: 30px;
+    }
+    
+    .login input:hover,.register input:hover,.login input:focus,.register input:focus{
+        outline: none;
+    }
+    
+    .login > div,.register > div{ /*Darstellugn der Linie */
+        position: relative;
+    }
+    .login > div:after,.register > div:after, .login > div:before,.register > div:before{
+        content: '';
+        position: absolute;
+        top: 100%;
+        width: 0%;
+        background: rgb(36, 202, 3);
+        left: 50%;
+        height: 2px;
+        transition: all .25s; 
+    }
+    .login > div:before{
+        background: #303030;
+    }
+    .register > div:after{
+        background: #303030;
+    }
+    .register > div:before{
+        background: #fff;
+    }
+    .login > div.trans:after,.register > div.trans:after, .login > div:before,.register > div:before{
+        width: 100%;
+        left: 0;
+    }
+    .login > div:not(.gender) label,.register > div:not(.gender) label{
+        position: absolute;
+        bottom: 5px;
+        left: 0;
+        transition: all .25s;
+        pointer-events: none;
+        font-weight: normal;
+    }
+    .login > div:not(.gender).trans label,.register > div:not(.gender).trans label{
+        bottom: 30px;
+        font-size: 12px;
+        opacity: .5;
+    }
+    
+    /* DISCLAIMER: Die Animation der Radiobuttons wurden von einem CodePen übernommen, damit es schön aussieht*/
+    .gender:before, .gender:after{
+        content: none !important;
+    }
+    .gender{
+        margin-top: 40px;
+    }
+    .gender label{
+        display: inline-block;
+        position: relative;
+        padding-left: 50px;
+        line-height: 35px; 
+        margin-right: 30px;
+    }
+    .gender label:before{
+        content: '';
+        height: 28px;
+        width: 28px;
+        position: absolute;
+        background: #fff;
+        border-radius: 50%;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
+        left: 0; 
+        top: 0;
+    }
+    .gender input[type="radio"]{
+        display: none;
+    }
+    .gender label:after{
+        content: '';
+        height: 16px;
+        width: 16px;
+        position: absolute;
+        background:rgb(36, 202, 3);
+        border-radius: 50%;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 4px 8px rgba(0,0,0,0.28);
+        transition: all .25s cubic-bezier(0.68,0.55,0.265,3);
+        left: 6px;
+        top: 6px; 
+        transform: scale(0);
+    }
+    .gender input[type="radio"]:checked+label:after{
+        transform: scale(1);
+    }
+    
+    
+    
+    .rooms {
+      border: black 1px solid;
+      align-self: flex-start;
+      width: 20%;
+      height:500px;
+    }
+    .chatspace {
+      border: black 1px solid;
+      align-self: flex-start;
+      width: 70%;
+      height:500px ;
+      overflow: scroll;
+      
+    }
+    .head-title {
+      flex: none; 
+    }
+    
