--- a/00_Endabgabe/Programm/CSS/stylesheet.css
+++ b/00_Endabgabe/Programm/CSS/stylesheet.css
@@ -174,7 +174,7 @@ body {
     flex-direction: column;
    
     width: 600px;
-    height: 80%px;
+    height: 500px;
     margin: 20px auto;
     padding: 1rem;
     border: 1px solid #eee;
