--- a/00_Endabgabe/Programm/CSS/stylesheet.css
+++ b/00_Endabgabe/Programm/CSS/stylesheet.css
@@ -1,4 +1,4 @@
-/* DISCLAIMER: Teile des CSS wurden aus Codepens übernommen*/
+/* DISCLAIMER: Teile des CSS wurde von Codepens inspiriert!*/
 body {
     font-family: 'Work Sans', sans-serif;
     }
