erstellung des canvas HTMLs

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzeptCss.css
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzeptCss.css
@@ -202,6 +202,9 @@
   .toolsStyle:hover {
     border-style: inset;
   }
+  img. {
+    padding-left: -3px;
+  }
 
 
   @media  (max-device-width: 860px){
