--- a/01_Endabgabe_v2/2_Programm/CSS/stylesheet.css
+++ b/01_Endabgabe_v2/2_Programm/CSS/stylesheet.css
@@ -16,8 +16,8 @@
   canvas {
     margin: 4px;
     background: white;
-    overflow: auto;
-    resize: both;
+    /*overflow: auto;
+    resize: both; */
   }
 
   h1 {
