--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzeptCss.css
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzeptCss.css
@@ -16,8 +16,8 @@
   canvas {
     margin: 4px;
     background: white;
-    overflow: auto;
-    resize: both;
+    /*overflow: auto;
+    resize: both;*/
   }
 
   h1 {
@@ -185,11 +185,13 @@
     width: 57px;
     height: 470px;
   }
-  .tools .toolsStyle {
+
+  .toolsStyle {
     width: 24px;
     height: 24px;
     background-size: 20px;
     background-position: 1px 2px;
+    cursor: help; 
   }
     
   
